--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -56,7 +56,7 @@ body {
 }
 
 .section {
-  padding: 60px 0 0;
+  padding: 60px 0 20px;
 
   @include media.sm-up {
     padding: 60px 0 20px;
@@ -99,6 +99,30 @@ body {
       padding: 140px 0;
     }
   }
+  &_subscription {
+  }
+  &_tickets {
+    background: radial-gradient(
+      ellipse 133% 225px at top center,
+      rgba(var(--yellow-rgb), 0.18) 0%,
+      transparent 100%
+    );
+
+    @include media.md-up {
+      background: radial-gradient(
+        ellipse 100% 296px at top center,
+        rgba(var(--yellow-rgb), 0.18) 0%,
+        transparent 100%
+      );
+    }
+    @include media.xl-up {
+      background: radial-gradient(
+        ellipse 100% 590px at top center,
+        rgba(var(--yellow-rgb), 0.18) 0%,
+        transparent 100%
+      );
+    }
+  }
 
   &__container {
     position: relative;
@@ -122,7 +146,7 @@ body {
       margin-bottom: 60px;
     }
     @include media.xl-up {
-      margin-bottom: 80px;
+      margin-bottom: 75px;
     }
   }
 }
