--- a/src/styles/partials/expectations.scss
+++ b/src/styles/partials/expectations.scss
@@ -43,27 +43,23 @@
         aspect-ratio: auto;
       }
 
+      // translucent dark background for better readability of text over the image
       &:after {
         content: "";
         position: absolute;
-        width: 115%;
-        height: 80%;
-        right: 0;
+        width: 100%;
+        height: 100%;
+        left: 0;
         bottom: 0;
-        border-radius: 50%;
-        background: rgba(0, 0, 0, 0.6);
-        filter: blur(54px);
-        transform: translateY(50%);
-
-        @include media.lg-up {
-          right: auto;
-          left: 0;
-          width: 60%;
-          filter: blur(114px);
-          transform: translate(-25%, 31%);
-        }
+        background: radial-gradient(
+          ellipse 460px 140px at 12% 83%,
+          rgba(0, 0, 0, 0.6) 0%,
+          rgba(0, 0, 0, 0.45) 40%,
+          transparent 100%
+        );
       }
     }
+
     &_pic {
       @include media.lg-down {
         display: none;
@@ -75,15 +71,14 @@
   }
   &__title {
     position: relative;
-    max-width: 12.4em;
+    max-width: 13.2em;
     padding: 20px;
     font-size: 24px;
     line-height: 1.1;
     font-weight: 800;
     color: var(--font-color-accent);
-    hyphens: auto; // вынести в mixins?
     overflow-wrap: break-word;
-    word-break: break-word;
+    word-break: normal;
     z-index: 10;
 
     @include media.xs-up {
@@ -102,7 +97,7 @@
       font-size: 30px;
     }
     @include media.xl-up {
-      padding: 40px 42px;
+      padding: 38px 42px;
       font-size: 38px;
     }
   }
