--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -4,61 +4,30 @@
   position: relative;
   margin-top: auto;
   padding: 40px 0;
+  background: radial-gradient(
+    ellipse 50% 100px at center bottom,
+    rgba(var(--yellow-rgb), 0.12) 0%,
+    transparent 100%
+  );
 
   @include media.md-up {
     padding: 60px 0;
-  }
+    background: none;
 
-  &__bg {
-    display: none;
-    pointer-events: none;
-    width: 100%;
-    height: 240px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    overflow: hidden;
-    z-index: 0;
-
-    @include media.md-up {
-      height: 700px;
-    }
-
-    &:before,
-    &:after {
+    &:before {
       content: "";
+      pointer-events: none;
       position: absolute;
       right: 0;
       bottom: 0;
-      border-radius: 50%;
-      background-color: var(--primary-color);
-    }
-    &:before {
-      width: 295px;
-      height: 295px;
-      bottom: auto;
-      top: 20%;
-      right: 20px;
-      transform: translate(0, 50%);
-      filter: blur(180px);
-      opacity: 0.6;
-
-      @include media.md-up {
-        width: 367px;
-        height: 367px;
-        transform: translate(0, 60%);
-        filter: blur(294px);
-      }
-    }
-    &:after {
-      @include media.md-up {
-        right: 183px;
-        width: 150px;
-        height: 150px;
-        transform: translate(50%, 60%);
-        filter: blur(64px);
-        opacity: 0.7;
-      }
+      height: 550px;
+      width: 550px;
+      background: radial-gradient(
+        circle 367px at 71% 110%,
+        rgba(var(--yellow-rgb), 0.4) 15%,
+        rgba(var(--yellow-rgb), 0.18) 40%,
+        transparent 100%
+      );
     }
   }
 
@@ -86,7 +55,7 @@
   &__side {
     @include media.md-up {
       flex-shrink: 1;
-      max-width: 210px;
+      max-width: 218px;
     }
   }
   &__organizers-link {
