--- a/src/styles/partials/inspiration.scss
+++ b/src/styles/partials/inspiration.scss
@@ -28,11 +28,14 @@
   &__top {
     position: relative;
     height: 326px;
-    padding: 0 28px;
+    padding: 0 24px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 
+    @include media.xs-up {
+      padding: 0 28px;
+    }
     @include media.phone-up {
       height: 354px;
     }
@@ -61,12 +64,15 @@
   }
   &__title {
     position: relative;
-    font-size: 27px;
+    font-size: 24px;
     line-height: 1.1;
     font-weight: 800;
     color: var(--font-color-accent);
     z-index: 1;
 
+    @include media.xs-up {
+      font-size: 27px;
+    }
     @include media.phone-up {
       font-size: 30px;
     }
@@ -78,17 +84,24 @@
     }
   }
   &__content {
-    padding: 18px 28px 28px;
+    padding: 15px 24px 24px;
 
+    @include media.xs-up {
+      padding: 18px 28px 28px;
+    }
     @include media.xxl-up {
       padding: 17px 40px 36px;
     }
   }
   &__text {
-    font-size: 14px;
-    line-height: 1.7;
+    font-size: 13px;
+    line-height: 1.6;
     font-weight: 500;
 
+    @include media.xs-up {
+      font-size: 14px;
+      line-height: 1.7;
+    }
     @include media.phone-up {
       font-size: 16px;
       line-height: 1.6;
