--- a/src/styles/partials/subscription.scss
+++ b/src/styles/partials/subscription.scss
@@ -18,7 +18,7 @@
     padding: 2px;
     border-radius: 999px;
     background-color: var(--white);
-    box-shadow: 0 0 120px var(--yellow-transparent);
+    box-shadow: 0 0 120px rgba(var(--yellow-rgb), 0.7);
 
     @include media.md-up {
       padding: 4px;
