--- a/src/styles/partials/tickets.scss
+++ b/src/styles/partials/tickets.scss
@@ -28,7 +28,6 @@
   padding: 40px 8px 8px;
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
-  backdrop-filter: blur(34px);
   background: rgba(255, 255, 255, 0.04);
 
   &__title {
