--- a/src/styles/ui/social.scss
+++ b/src/styles/ui/social.scss
@@ -12,7 +12,7 @@
   gap: 12px 18px;
 
   @include media.md-up {
-    gap: 20px 40px;
+    gap: 10px 38px;
   }
 
   &_main {
